{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 118,
  "lineage": "80d46f35-fef9-0967-103f-1f474291bde8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7904db60f5c38ce",
            "arn": "arn:aws:ec2:us-west-1:577328891432:instance/i-08bad6899d1c3445c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bad6899d1c3445c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mty754-us-west-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0447ec11ff8d2aa90",
            "private_dns": "ip-10-0-1-206.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-13-56-195-249.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.195.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08b6b196e3e4bce73",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2bc6694547656ef",
            "tags": {
              "Name": "ec2_instance_5g"
            },
            "tags_all": {
              "Name": "ec2_instance_5g"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0118e84df94c0f221"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet_5g",
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:577328891432:internet-gateway/igw-0bd0157fee61c552a",
            "id": "igw-0bd0157fee61c552a",
            "owner_id": "577328891432",
            "tags": {
              "Name": "igw_5g"
            },
            "tags_all": {
              "Name": "igw_5g"
            },
            "vpc_id": "vpc-0f828189cc13ff188"
          },
          "dependencies": [
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:577328891432:route-table/rtb-0b73e8345699e8cad",
            "id": "rtb-0b73e8345699e8cad",
            "owner_id": "577328891432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd0157fee61c552a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_5g"
            },
            "tags_all": {
              "Name": "route_table_5g"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f828189cc13ff188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_5g",
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc10bcad75543833",
            "route_table_id": "rtb-0b73e8345699e8cad",
            "subnet_id": "subnet-0e2bc6694547656ef"
          },
          "dependencies": [
            "aws_internet_gateway.igw_5g",
            "aws_route_table.route_table_5g",
            "aws_subnet.subnet_5g",
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:577328891432:security-group/sg-0118e84df94c0f221",
            "description": "Allow inbound SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0118e84df94c0f221",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8805,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8805
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8805,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8805
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "577328891432",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f828189cc13ff188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:577328891432:subnet/subnet-0e2bc6694547656ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2bc6694547656ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "577328891432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_5g"
            },
            "tags_all": {
              "Name": "subnet_5g"
            },
            "vpc_id": "vpc-0f828189cc13ff188"
          },
          "dependencies": [
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:577328891432:vpc/vpc-0f828189cc13ff188",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0842813211f3cac1e",
            "default_route_table_id": "rtb-04b616c22c6df5863",
            "default_security_group_id": "sg-0b12d6593728473c8",
            "dhcp_options_id": "dopt-0851d7c1696542d53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f828189cc13ff188",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b616c22c6df5863",
            "owner_id": "577328891432",
            "tags": {
              "Name": "vpc_5g"
            },
            "tags_all": {
              "Name": "vpc_5g"
            }
          }
        }
      ]
    }
  ]
}